chore: schema updates and implemented best practices
